<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_user"
                android:title="@string/profile"/>
        <item
                android:id="@+id/nav_school"
                android:icon="@drawable/ic_graduation_cap"
                android:title="@string/school"/>
        <item
                android:id="@+id/nav_submission"
                android:icon="@drawable/ic_cloud_upload"
                android:title="@string/title_submit_material"/>
        <item
                android:id="@+id/nav_challenge"
                android:icon="@drawable/ic_handshake_o"
                android:title="@string/challenge"/>
        <item
                android:id="@+id/nav_wallet"
                android:icon="@drawable/ic_wallet"
                android:title="@string/wallet"/>
        <item
                android:id="@+id/nav_qa"
                android:icon="@drawable/ic_asl_interpreting"
                android:title="@string/question_and_answer"/>
        <item
                android:id="@+id/nav_coorporative"
                android:icon="@drawable/ic_shopping_bag"
                android:title="@string/cooperative"/>
        <item
                android:id="@+id/nav_absent"
                android:icon="@drawable/ic_calendar_check_o"
                android:title="@string/absent"/>
        <item android:title="@string/account" >
            <menu>
                <item
                        android:id="@+id/nav_setting"
                        android:icon="@drawable/ic_gears"
                        android:title="@string/setting"/>
                <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/ic_sign_out"
                        android:title="@string/logout"/>
            </menu>
        </item>
    </group>
</menu>
