<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                android:gravity="center"
                tools:context="com.slerpio.teachme.LoginActivity">

            <ImageView
                    android:src="@drawable/logo"
                    android:layout_width="200dp"
                    android:layout_height="60dp" tools:ignore="ContentDescription"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="20dp"
                    android:id="@+id/phoneNumberWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/phoneNumber"
                        android:hint="@string/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="phone"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/fullnameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/fullname"
                        android:hint="@string/fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="text"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/usernameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/username"
                        android:hint="@string/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="text"
                />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >
                <EditText
                        android:id="@+id/password"
                        android:hint="@string/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/retypePasswordWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >
                <EditText
                        android:id="@+id/retypePassword"
                        android:hint="@string/retype_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                    android:layout_marginTop="@dimen/ten_dp"
                    android:text="@string/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <RadioGroup
                    android:id="@+id/genderRadioGroup"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <RadioButton
                        android:id="@+id/man"
                        android:text="@string/man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:checked="true"/>
                <RadioButton
                        android:id="@+id/woman"
                        android:text="@string/woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </RadioGroup>

            <TextView
                    android:id="@+id/levelAndClass"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:text="@string/teaching_at"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:layout_marginTop="@dimen/ten_dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Spinner
                        android:id="@+id/spinnerLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <Spinner
                        android:layout_marginLeft="@dimen/ten_dp"
                        android:id="@+id/spinnerClass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <Button
                    android:layout_marginTop="20dp"
                    android:id="@+id/registerButton"
                    android:enabled="false"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sixteen_sp"
                    android:background="@drawable/btn_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:visibility="gone"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/have_account"
                        android:textSize="@dimen/sixteen_sp"
                        android:textColor="@android:color/black"
                />
                <TextView
                        android:id="@+id/registerTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textSize="@dimen/sixteen_sp"
                        android:textColor="@color/colorAccent"
                />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>

