<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginBottom="@dimen/sixty_dp"
            android:gravity="center"
            tools:context="com.slerpio.teachme.LoginActivity">

        <ImageView
                android:src="@drawable/logo"
                android:layout_width="200dp"
                android:layout_height="60dp" tools:ignore="ContentDescription"/>

        <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginText"
                android:text="@string/have_fun"/>

        <android.support.design.widget.TextInputLayout
                android:layout_marginTop="20dp"
                android:id="@+id/usernameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/username"
                    android:hint="@string/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <EditText
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
                android:layout_marginTop="20dp"
                android:id="@+id/loginButton"
                android:enabled="false"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sixteen_sp"
                android:background="@drawable/btn_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal" android:visibility="gone"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/does_not_have_account"
                    android:textSize="@dimen/sixteen_sp"
                    android:textColor="@android:color/black"
            />
            <TextView
                    android:id="@+id/registerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textSize="@dimen/sixteen_sp"
                    android:textColor="@color/colorAccent"
            />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
