<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:context="com.slerpio.teachme.ProfileActivity">


        <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ProgressBar
                        android:layout_alignParentTop="true"
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:visibility="gone"/>
                <LinearLayout
                        android:background="@drawable/gradientbackground"
                        android:layout_width="match_parent"
                        android:layout_height="260dp"
                        android:orientation="vertical">
                    <com.slerpio.teachme.helper.image.CircleImageView
                            android:layout_marginTop="45dp"
                            android:layout_gravity="center_horizontal"

                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@color/colorAccent" android:id="@+id/profileImage"/>
                    <TextView
                            android:layout_marginTop="@dimen/ten_dp"
                            android:id="@+id/fullnameHeader"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/three_dot"
                            android:textColor="#fff"
                            android:textStyle="bold"
                            android:textSize="21sp"/>
                    <TextView
                            android:id="@+id/usernameHeader"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/three_dot"
                            android:textColor="#fff"
                            android:textStyle="bold"
                            android:textSize="16sp"/>

                </LinearLayout>

            </RelativeLayout>
            <LinearLayout
                    android:padding="20dp"
                    android:orientation="vertical"
                    android:background="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_marginTop="@dimen/twenty_dp"
                        android:padding="@dimen/ten_dp"
                        android:background="@drawable/gradientbackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:textColor="@android:color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/change_profile"
                            android:textStyle="bold"/>
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_marginTop="@dimen/twenty_dp"
                        android:id="@+id/phoneNumberWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:id="@+id/phoneNumber"
                            android:hint="@string/phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="phone"
                    />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:id="@+id/fullnameWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:id="@+id/fullname"
                            android:hint="@string/fullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="text"
                    />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:id="@+id/usernameWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:id="@+id/username"
                            android:hint="@string/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="text"
                    />
                </android.support.design.widget.TextInputLayout>
                <TextView
                        android:layout_marginTop="@dimen/ten_dp"
                        android:text="@string/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <RadioGroup
                        android:id="@+id/genderRadioGroup"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <RadioButton
                            android:id="@+id/man"
                            android:text="@string/man"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:checked="true"/>
                    <RadioButton
                            android:id="@+id/woman"
                            android:text="@string/woman"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </RadioGroup>
                <LinearLayout
                        android:layout_marginTop="@dimen/twenty_dp"
                        android:padding="@dimen/ten_dp"
                        android:background="@drawable/gradientbackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:textColor="@android:color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/change_password"
                            android:textStyle="bold"/>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/passwordWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/ten_dp"
                >
                    <EditText
                            android:id="@+id/password"
                            android:hint="@string/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:id="@+id/retypePasswordWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                >
                    <EditText
                            android:id="@+id/retypePassword"
                            android:hint="@string/retype_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                        android:id="@+id/editProfileButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_primary"
                        android:textColor="@android:color/white"
                        android:text="@string/done"
                />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <!--<LinearLayout-->
            <!--android:id="@+id/editProfileButton"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:clickable="true"-->
            <!--android:background="@color/colorAccent"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" android:visibility="gone">-->
        <!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
                <!--&lt;!&ndash;android:padding="10dp"&ndash;&gt;-->

                <!--&lt;!&ndash;android:background="?selectableItemBackground"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;&gt;&ndash;&gt;-->
            <!--&lt;!&ndash;<TextView&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:text="Selesai"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:textSize="21dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:textColor="@android:color/white"/>&ndash;&gt;-->
        <!--&lt;!&ndash;</LinearLayout>&ndash;&gt;-->
    <!--</LinearLayout>-->

</RelativeLayout>